@startuml

title __SNAKE's Class Diagram__\n

  namespace com.javarush.games.snake {
    class com.javarush.games.snake.Apple {
        + isAlive : boolean
        {static} - APPLE_SIGN : String
        + Apple()
        + draw()
    }
  }
  

  namespace com.javarush.games.snake {
    enum Direction {
      DOWN
      LEFT
      RIGHT
      UP
    }
  }
  

  namespace com.javarush.games.snake {
    class com.javarush.games.snake.GameObject {
        + x : int
        + y : int
        + GameObject()
    }
  }
  

  namespace com.javarush.games.snake {
    class com.javarush.games.snake.Snake {
        + isAlive : boolean
        {static} - BODY_SIGN : String
        {static} - HEAD_SIGN : String
        - snakeParts : List<GameObject>
        + Snake()
        + checkCollision()
        + createNewHead()
        + draw()
        + getLength()
        + move()
        + removeTail()
        + setDirection()
    }
  }
  

  namespace com.javarush.games.snake {
    class com.javarush.games.snake.SnakeGame {
        {static} + HEIGHT : int
        {static} + WIDTH : int
        {static} - GOAL : int
        - isGameStopped : boolean
        - score : int
        - turnDelay : int
        + initialize()
        + onKeyPress()
        + onTurn()
        - createGame()
        - createNewApple()
        - drawScene()
        - gameOver()
        - win()
    }
  }
  

  com.javarush.games.snake.Apple -up-|> com.javarush.games.snake.GameObject
  com.javarush.games.snake.Snake o-- com.javarush.games.snake.Direction : direction
  com.javarush.games.snake.SnakeGame -up-|> com.javarush.engine.cell.Game
  com.javarush.games.snake.SnakeGame o-- com.javarush.games.snake.Apple : apple
  com.javarush.games.snake.SnakeGame o-- com.javarush.games.snake.Snake : snake


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
